name:                jalapeno
version:             0.0.0.0
synopsis:            An FRP network in the classic sense of FRP.
description:         An FRP network in the classic sense of FRP.
homepage:            http://github.com/crockeo/jalapeno
license:             MIT
license-file:        LICENSE
author:              Cerek Hillen
maintainer:          cerekh@gmail.om
copyright:           (C) 2015
category:            FRP
build-type:          Simple
cabal-version:       >= 1.10

library
  exposed-modules: FRP.Jalapeno
                 , FRP.Jalapeno.Behavior
                 , FRP.Jalapeno.Input
                 , FRP.Jalapeno.IO
                 , FRP.Jalapeno.Sample

  build-depends:   base         >= 4.6 && < 4.8
               ,   GLFW         == 0.5.2.2
               ,   OpenGL       == 2.9.2.0
               ,   time         == 1.4.2
               ,   transformers == 0.3.0.0

  hs-source-dirs:  src/lib/

  default-language:Haskell2010

executable jalapeno-test
  main-is:          Main.hs

  build-depends:    base     >= 4.6 && < 4.8
               ,    GLFW     == 0.5.2.2
               ,    jalapeno

  hs-source-dirs:   src/app/

  default-language: Haskell2010
